--- a/src/styles/lektorkavpraze-narrow5.css
+++ b/src/styles/lektorkavpraze-narrow5.css
@@ -4,34 +4,38 @@ body {
 
 #header {
 	text-align: left;
-        width: 100%;
-        height: 30%;
-        position: relative;
-        top: 0;
-        left: 0;
+	width: 100%;
+	height: 30%;
+	position: relative;
+	top: 0;
+	left: 0;
 	background-color: rgba(255,255,255,0.85);
 }
 
 #logo {
-	width: 30%;
-	min-width: 64px;
+	width: 22%;
+	min-width: 150px;
 	float: left;
 }
 
 #menu {
 	float: right;
 	height: 100%;
-	padding: 25px;
+	padding: 3%;
+	padding-left: 0;
+	border-top-left-radius: 25px;
+	border-top-right-radius:0;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 0;
 }
 
 #content {
 	position: static;
 	float: left;
-        padding-left: 13%;
-        padding-right: 10%;
-        padding-top: 0;
+	padding-left: 13%;
+	padding-right: 10%;
+	padding-top: 0;
 	padding-bottom: 5%;
-        border-radius: 25px;
 }
 
 #footer {
@@ -42,15 +46,23 @@ body {
 	box-sizing: border-box;
 	position: relative;
 	float: left;
-        padding: 5%;
-        padding-bottom: 7%;
-        width: 50%;
+	padding-left: 13%;
+	padding-right: 20%;
+	padding-top: 5%;
+	padding-bottom: 7%;
+	width: 100%;
 	left: 8%;
 }
 
 #contact {
-	margin: 2%;
+	margin: 0;
 	display: block;
 	float: right;
 	padding: 5%;
+	border-radius: 0;
+	width: 100%;
+	box-shadow: 0;
+	text-align: center;
+	padding: 1%;
+	box-shadow: none;
 }
