refresh graphics and stamped styles

--- a/src/styles/wide.css
+++ b/src/styles/wide.css
@@ -55,6 +55,12 @@ html {
 	width: 65%;
 }
 
+#refresh {
+	position: absolute;
+	bottom: 12px;
+	left: 8px;
+}
+
 #contact {
 	margin-right: 2%;
 	margin-bottom: 2%;
