--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -85,6 +85,14 @@ a.active {
 	cursor: pointer;
 	background-color: rgba(255,255,255,0.85);
 	border-radius: 25px;
+	background-image: none;
+}
+
+#quote:hover {
+	background-image: url("/images/refresh.svg");
+	background-position: left bottom;
+	background-repeat: no-repeat;
+	background-size: 50px;
 }
 
 #author {
@@ -101,6 +109,10 @@ a.active {
 	text-align: right;
 	height: 1.5em;
 	vertical-align: baseline;
+}
+
+#refresh:hover {
+	opacity: 0.5;
 }
 
 #contact {
