--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -86,6 +86,16 @@ a.active {
         padding-bottom: 1em;
 }
 
+#copyright {
+	font-size: 12px;
+	opacity: 0.5;
+}
+
+#notices {
+	padding-top: 0.2em;
+	font-size: 8px;
+}
+
 #quote {
 	display: table-cell;
 	font-size: 13px;
