style for links in contact

--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -25,6 +25,10 @@ a.active {
         box-shadow: #434343;
 }
 
+#contact a {
+	color: #000000;
+}
+
 #menu {
         background-color: rgba(0,0,0,0.75);
 }
